--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,15 +1,155 @@
-@import url("https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap");
+        @import url("https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap");
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  text-decoration: none;
-}
+        * {
+            margin: 10;
+            padding: 0;
+            box-sizing: border-box;
+            text-decoration: none;
+        }
 
-body {
-  font-size: 100%;
-  height: 100vh;
-  overflow: hidden;
-  background: linear-gradient(-30deg, #134628,  #0f6b35, 70%, #0b3c26);
-}
+        body {
+            font-size: 80%;
+            height: 100vh;
+            max-height: 100vh;
+            overflow: hidden;
+        }
+
+        button {
+            background-color: #065226;
+            color: white;
+            border: none;
+            height: 30px;
+            padding: 5px;
+            cursor: pointer;
+            border-radius: 4px;
+            transition: background-color 0.3s;
+        }
+
+        button:hover {
+            background-color: #033518;
+        }
+
+        .pagina {
+            flex-direction: row;
+            height: 100vh;
+            display: flex;
+            position: relative;
+        }
+
+        .menu {
+            position: relative;
+            background-color: #0f6b35;
+            color: white;
+            padding: 20px;
+            width: 15%;
+            z-index: 1;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .opcao {
+            padding: 5px;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+
+        .opcao:hover {
+            background-color: #065226;
+        }
+
+        .subopcoes {
+            display: none;
+            padding-left: 10px;
+            flex-direction: column;
+        }
+
+        .opcao:hover .subopcoes {
+            display: flex;
+        }
+
+        .subopcao {
+            padding: 5px;
+            cursor: pointer;
+            color: #ddd;
+            border-radius: 4px;
+        }
+
+        .subopcao:hover {
+            background-color: #033518;
+        }
+
+        .logout-button {
+            margin-top: 10px;
+        }
+
+        .section-info {
+            flex: 1;
+            padding: 20px;
+            position: relative;
+            z-index: 0;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .header {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;;
+        }
+
+        fieldset {
+            border: 1px solid black;
+            padding: 10px;
+            height: 100vh;
+        }
+        
+        a {
+            color: white;
+            text-decoration: none;
+        }
+        a:hover {
+            color: white;
+            font-weight: bold;
+            text-decoration: none;
+        }
+
+        legend {
+            margin-left: 5px;
+            width: 12%;
+            background-color: white;
+            display: flex;
+            flex-direction: column;
+
+        }
+
+        .filtro {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+            font-size: 12px;
+            visibility: hidden;
+        }
+
+        .dados {
+            margin: 3px;
+            max-height: 60vh;
+            /* Defina a altura máxima desejada */
+            overflow: auto;
+            /* border: 1px solid black; */
+            width: 99.50%;
+            border: 1px solid black;
+            padding: 5px;
+        }
+
+        table {
+            width: 100%;
+        }
+
+        th, td {
+            border-bottom: 1px solid black;
+        }
+
+        .active{
+            font-weight: bold;
+        }
