Integração com back end

--- a/resources/views/components/cadastro-estabelecimento-zoop.edge
+++ b/resources/views/components/cadastro-estabelecimento-zoop.edge
@@ -1,10 +1,13 @@
 <form id="cadastroEstabelecimentoZoop" class="cadastrar-estabelecimento-zoop" action="" method="post">
-    <input type="text" name="identificador" id="identificador" placeholder="Identificador">
-    <input type="text" name="nome" id="nome" placeholder="Nome">
-    <input type="text" name="cnpj" id="cnpj" placeholder="Cnpj">
-    <select class="" name="tipo" id="tipo">
+    <input type="text" name="identificador" id="identificadorZoop" placeholder="Identificador">
+    <input type="text" name="nome" id="nomeZoop" placeholder="Nome">
+    <input type="text" name="cnpj" id="cnpjZoop" placeholder="Cnpj">
+    <select class="" name="tipo" id="tipoZoop">
         <option value="" disabled selected>Selecione uma conta</option>
-        <option value="1">Zoop</option>
-        <option value="2">Sumcred</option>
+        <option value="1">ZOOP</option>
+        <option value="2">SUMCRED</option>
     </select>
 </form>
+<script>
+    $('#cnpjZoop').inputmask('99.999.999/9999-99', { placeholder: '__.___.___/____-__' });
+</script>
