--- a/resources/views/components/vincular-terminal.edge
+++ b/resources/views/components/vincular-terminal.edge
@@ -2,8 +2,8 @@
     <input type="text" name="serie" id="serie" placeholder="Nº de série">
     <select class="" name="tipo" id="tipo">
         <option value="" disabled selected>Selecione uma conta</option>
-        <option value="1">Zoop</option>
-        <option value="2">Sumcred</option>
+        <option value="1">ZOOP</option>
+        <option value="2">SUMCRED</option>
     </select>
     <input type="text" name="descricao" id="descricao" placeholder="Descrição">
 </form>
