--- a/resources/views/components/cadastro-usuario.edge
+++ b/resources/views/components/cadastro-usuario.edge
@@ -1,22 +1,53 @@
 <form id="cadastroUsuario" class="cadastrar-usuario" action="" method="post">
-    <input type="text" name="nome" id="nome" placeholder="Nome">
-    <input type="text" name="cpf" id="cpf" placeholder="CPF">
-    <input type="password" name="password" id="password" placeholder="password">
-    <select class="" name="tipo" id="tipo">
+    <input type="text" name="nome" id="nomeUsuario" placeholder="Nome">
+    <input type="username" name="cpf" id="cpfUsuario" placeholder="CPF">
+    <input type="current-password" name="password" id="passwordUsuario" placeholder="password">
+    <select class="" name="tipo" id="tipoUsuario">
         <option value="" disabled selected>Selecione uma permissão</option>
-        <option value="0">Administrador</option>
-        <option value="1">Filial</option>
+        <option value="0">ADMINISTRADOR</option>
+        <option value="1">FILIAL</option>
     </select>
-    <select class="select-estabelecimento" name="estabelecimentos[]" multiple="multiple">
-        <option value="0">Estabelecimento 1</option>
-        <option value="1">Estabelecimento 2</option>
-        <option value="2">Estabelecimento 3</option>
-        <option value="3">Estabelecimento 4</option>
-        <option value="4">Estabelecimento 4</option>
-        <option value="5">Estabelecimento 4</option>
-        <option value="6">Estabelecimento 4</option>
-        <option value="7">Estabelecimento 4</option>
-        <option value="8">Estabelecimento 4</option>
-        <option value="9">Estabelecimento 4</option>
-    </select>
+    <select class="select-estabelecimento" name="estabelecimentos[]" multiple="multiple"></select>
 </form>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/js/select2.min.js"></script>
+<script>
+    $('#cpfUsuario').inputmask('999.999.999-99', { placeholder: '___.___.___-__' });
+
+    async function fetchEstabelecimentos() {
+        try {
+            const response = await fetch('/api/mesh/estabelecimentos', {
+                method: 'POST',
+            });
+
+            if (!response.ok) {
+                throw new Error('Erro na requisição');
+            }
+
+            const estabelecimentos = await response.json();
+            return estabelecimentos;
+        } catch (error) {
+            console.error('Erro ao buscar estabelecimentos:', error);
+            return [];
+        }
+    }
+
+    async function populateEstabelecimentosSelect() {
+        const estabelecimentos = await fetchEstabelecimentos();
+        const selectElement = document.querySelector('.select-estabelecimento');
+
+        estabelecimentos.forEach(estabelecimento => {
+            const option = document.createElement('option');
+            option.value = estabelecimento.id;
+            option.text = `${estabelecimento.nome} - CNPJ: ${estabelecimento.cnpj}`;
+            selectElement.appendChild(option);
+        });
+
+        $('.select-estabelecimento').select2({
+            placeholder: "Selecione um estabelecimento (opcional)"
+        });
+    }
+
+    document.addEventListener("DOMContentLoaded", populateEstabelecimentosSelect);
+</script>
