--- a/resources/views/components/cadastro-estabelecimento-zoop.edge
+++ b/resources/views/components/cadastro-estabelecimento-zoop.edge
@@ -1,13 +1,10 @@
-<form id="cadastroEstabelecimentoZoop" class="cadastrar-estabelecimento-zoop" action="" method="post">
-    <input type="text" name="identificador" id="identificadorZoop" placeholder="Identificador">
-    <input type="text" name="nome" id="nomeZoop" placeholder="Nome">
-    <input type="text" name="cnpj" id="cnpjZoop" placeholder="Cnpj">
-    <select class="" name="tipo" id="tipoZoop">
+<form id="cadastro-estabelecimento-zoop" class="cadastrar-estabelecimento-zoop" action="" method="post">
+    <input type="text" name="identificador" id="identificador-zoop" placeholder="Identificador">
+    <input type="text" name="nome" id="nome-zoop" placeholder="Nome">
+    <input type="text" name="cnpj" id="cnpj-zoop" placeholder="Cnpj">
+    <select class="" name="tipo" id="tipo-zoop">
         <option value="" disabled selected>Selecione uma conta</option>
         <option value="1">ZOOP</option>
         <option value="2">SUMCRED</option>
     </select>
 </form>
-<script>
-    $('#cnpjZoop').inputmask('99.999.999/9999-99', { placeholder: '__.___.___/____-__' });
-</script>
