--- a/resources/views/components/vincular-terminal.edge
+++ b/resources/views/components/vincular-terminal.edge
@@ -1,4 +1,4 @@
-<form id="vincularTerminal" class="vincular-terminal" action="" method="post">
+<form id="vincular-terminal" class="vincular-terminal" action="" method="post">
     <input type="text" name="serie" id="serie" placeholder="Nº de série">
     <select class="" name="tipo" id="tipo">
         <option value="" disabled selected>Selecione uma conta</option>
