--- a/public/style/index.css
+++ b/public/style/index.css
@@ -1,155 +1,578 @@
-        @import url("https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap");
 
-        * {
-            margin: 10;
-            padding: 0;
-            box-sizing: border-box;
-            text-decoration: none;
+/* Estilo global */
+* {
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: "Sarala"
+}
+
+body {
+    background-color: #f5f5f5;
+    font-family: Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+}
+
+/* Estilo tela de login */
+.login-container {
+    background-color: #fff;
+    border-radius: 1.0rem;
+    box-shadow: 0rem 0.5rem 1rem rgba(0, 0, 0, 0.3);
+    padding: 2.0rem;
+    width: 25%;
+    height: 35vh
+}
+
+
+.login-container h2 {
+    font-size: 2rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
+}
+
+.login-form {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+.login-form input {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 0.5rem;
+}
+
+.login-form input[type="text"],
+.login-form input[type="password"] {
+    width: 100%;
+}
+
+.login-form input[type="submit"] {
+    background-color: #0f6b35;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    padding: 0.5rem;
+    transition: background-color 0.3s;
+}
+
+.login-form input[type="submit"]:hover {
+    background-color: #094723;
+    font-weight: bold
+}
+
+.login-modal-alerts {
+    position: fixed;
+    top: 5vh;
+    right: 2rem;
+    z-index: 1050;
+    font-family: "Sarala"
+}
+
+.login-modal-alert {
+    width: 100%;
+    margin-bottom: 2rem;
+}
+
+/* Estilo tela principal */
+.pagina {
+    flex-direction: row;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    position: relative;
+}
+
+/* Estilo menu */
+.menu a {
+    text-decoration: none;
+}
+
+.menu a:hover {
+   color: white;
+}
+
+.menu {
+    position: relative;
+    width: 13%;
+    height: 100vh;
+    padding: 1.0rem;
+    z-index: 1;
+    display: flex;
+    flex-direction: column;
+    background-color: #0f6b35;
+    color: white;
+    align-items: center;
+    font-size: 16px
+}
+
+.navegacao {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo-pax {
+    width: 50%;
+    margin-bottom: 2rem
+}
+
+.opcao {
+    padding: 5px;
+    cursor: pointer;
+    border-radius: 5px;
+    width: 100%;
+    transition: background-color 0.3s;
+}
+
+.opcao:hover {
+    background-color: #065226;
+}
+
+.sub-opcoes {
+    display: flex;
+    padding-left: 1px;
+    flex-direction: column;
+}
+
+.sub-opcao {
+    padding: 10px;
+    cursor: pointer;
+    color: #bbbbbb;
+    border-radius: 5px;
+    transition: background-color 0.5s;
+}
+
+.sub-opcao:hover {
+    background-color: #033518;
+}
+
+.footer-menu {
+    position: absolute;
+    bottom: 5vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-usuario {
+    font-weight: bold;
+}
+
+.btn-sair {
+    margin-top: 10px;
+    width: 150px;
+    padding: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    border: none;
+    border-radius: 2px;
+    background-color: #065226;
+    color: white;
+}
+
+.btn-sair:hover {
+    background-color: #033518;
+}
+
+@media (max-width: 1080px) {
+    .menu span {
+        display: none
+    }
+
+    .logo-pax {
+        width: 100%;
+    }
+
+    .btn-sair {
+        width: 100%;
+        background-color: transparent
+    }
+
+    .sub-opcoes {
+        display: none !important;
+        flex-direction: column;
+    }
+
+    .opcao:hover .sub-opcoes {
+        display: flex !important;
+    }
+}
+
+/* Estilo cadastro */
+.modal-dialog {
+    width: 600px;
+}
+
+.modal-content {
+    background-color: white;
+    border: none;
+    width: 100%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    font-family: 'Sarala'
+}
+
+.modal-header {
+    background-color: #343a40;
+    color: white;
+    padding: 15px;
+}
+
+.modal-title {
+    font-size: 1.2rem;
+}
+
+.modal-body {
+    padding: 20px;
+}
+
+.modal-footer {
+    border-top: none;
+    padding: 15px;
+    text-align: right;
+}
+
+.btn {
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.btn-secondary {
+    background-color: #6c757d;
+    color: white;
+    font-size: 1rem;
+}
+
+.btn-primary {
+    background-color: #0f6b35;
+    color: white;
+    font-size: 1rem;
+}
+
+.btn-primary:hover {
+    background-color: #094723;
+}
+
+.btn-close {
+    font-size: 1.2rem;
+    color: #fff;
+}
+
+.modal-body a:hover {
+    text-decoration: underline;
+}
+
+.modal-alerts {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    z-index: 1050;
+    font-family: 'Sarala'
+}
+
+.modal-alert {
+    width: 300px;
+    margin-bottom: 10px;
+}
+
+.modal-body form {
+    max-width: 100%;
+}
+
+.modal-body input,
+.modal-body select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+@media (max-width: 768px) {
+
+    .modal-body input,
+    .modal-body select {
+        width: 100%;
+    }
+
+    .modal-footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center
+    }
+}
+
+.select-estabelecimento+.select2-container {
+    width: 100% !important;
+}
+
+.select2-dropdown {
+    z-index: 9999;
+    position: relative !important;
+}
+
+.cadastrar-usuario,
+.vincular-terminal,
+.cadastrar-estabelecimento-zoop,
+.cadastrar-estabelecimento-use {
+    display: none;
+}
+
+
+    .dashboard-container {
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 1px 4px 20px rgba(0, 0, 0, 0.301);
+        margin: 20px auto;
+        padding: 20px;
+        width: 85%;
+    }
+
+    .dashboard-title {
+        margin-bottom: 20px;
+    }
+
+    .dashboard-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-bottom: 20px;
+    }
+
+    .date-form {
+        display: flex;
+        gap: 10px;
+    }
+
+    .filter-button {
+        background-color: #0f6b35;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        cursor: pointer;
+        padding: 8px 15px;
+        transition: background-color 0.3s;
+    }
+
+    .filter-button:hover {
+        background-color: #094723;
+    }
+
+    #view-all,
+    #view-detailed {
+        background-color: #0f6b35;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        cursor: pointer;
+        padding: 8px 15px;
+        transition: background-color 0.3s;
+    }
+
+    #view-all:hover,
+    #view-detailed:hover {
+        background-color: #094723;
+    }
+
+    .active-view {
+        background-color: #094723 !important;
+    }
+
+    .scrollable-table {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        margin-top: 10px;
+    }
+
+/* Adicione uma classe para estilizar o scrollbar */
+.scrollable-table {
+    position: relative;
+}
+
+.data-table {
+    max-height: calc(100vh - 200px);
+    overflow-y: auto;
+    border: 1px solid #ddd;
+    border-top: none;
+    font-size: 15px;
+}
+
+.data-table table {
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
+}
+
+.data-table thead th {
+    text-align: left;
+    font-weight: bold;
+    padding: 10px 15px;
+    border: 1px solid #ddd;
+    background-color: #f5f5f5;
+}
+
+.data-table tbody td {
+    text-align: left;
+    padding: 10px 15px;
+    border: 1px solid #ddd;
+}
+
+.data-table tbody tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+.data-table tbody tr:hover {
+    background-color: #f0f0f0;
+    cursor: pointer;
+}
+
+/* Estilização do scrollbar */
+.data-table::-webkit-scrollbar {
+    width: 8px;
+}
+
+.data-table::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+}
+
+.data-table::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+.data-table::-webkit-scrollbar-track {
+    background-color: #f5f5f5;
+}
+
+
+    .print-button {
+        background-color: #6c757d;
+        color: white;
+        cursor: pointer;
+        border: none;
+        border-radius: 5px;
+        padding: 8px 15px;
+        transition: background-color 0.3s;
+    }
+
+    .print-button:hover {
+        background-color: #5a6268;
+    }
+
+
+    .repasse-button,
+    .comprovante-button {
+        background-color: #6c757d;
+        color: white;
+        cursor: pointer;
+        border: none;
+        border-radius: 5px;
+        padding: 5px;
+        box-shadow: black 1px 1px 1px;
+        transition: background-color 0.3s;
+    }
+
+    .repasse-button:hover,
+    .comprovante-button:hover {
+        background-color: #5a6268;
+    }
+
+    .modal-alerts-dashboard {
+        position: fixed;
+        bottom: 50px;
+        right: 50px;
+        z-index: 1050;
+        font-family: 'Sarala'
+    }
+
+    .modal-alert-dashboard {
+        width: 300px;
+        margin-bottom: 50px;
+    }
+
+    @media screen and (max-width: 768px) {
+        .dashboard-container {
+            width: 90%;
+        }
+    }
+
+    .loading-modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 999;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .loading-modal-content {
+        background-color: white;
+        padding: 20px;
+        border-radius: 5px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .spinner {
+        border: 5px solid rgba(0, 0, 0, 0.1);
+        border-top: 5px solid #333;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        animation: spin 1s linear infinite;
+        margin-bottom: 10px;
+    }
+
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
         }
 
-        body {
-            font-size: 80%;
-            height: 100vh;
-            max-height: 100vh;
-            overflow: hidden;
+        100% {
+            transform: rotate(360deg);
         }
+    }
 
-        button {
-            background-color: #065226;
-            color: white;
-            border: none;
-            height: 30px;
-            padding: 5px;
-            cursor: pointer;
-            border-radius: 4px;
-            transition: background-color 0.3s;
-        }
+    .custom-modal {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 999;
+        justify-content: center;
+        align-items: center;
+    }
 
-        button:hover {
-            background-color: #033518;
-        }
+    .modal-content {
+        text-align: center;
+    }
 
-        .pagina {
-            flex-direction: row;
-            height: 100vh;
-            display: flex;
-            position: relative;
-        }
-
-        .menu {
-            position: relative;
-            background-color: #0f6b35;
-            color: white;
-            padding: 20px;
-            width: 15%;
-            z-index: 1;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .opcao {
-            padding: 5px;
-            cursor: pointer;
-            border-radius: 4px;
-        }
-
-        .opcao:hover {
-            background-color: #065226;
-        }
-
-        .subopcoes {
-            display: none;
-            padding-left: 10px;
-            flex-direction: column;
-        }
-
-        .opcao:hover .subopcoes {
-            display: flex;
-        }
-
-        .subopcao {
-            padding: 5px;
-            cursor: pointer;
-            color: #ddd;
-            border-radius: 4px;
-        }
-
-        .subopcao:hover {
-            background-color: #033518;
-        }
-
-        .logout-button {
-            margin-top: 10px;
-        }
-
-        .section-info {
-            flex: 1;
-            padding: 20px;
-            position: relative;
-            z-index: 0;
-            overflow: hidden;
-            display: flex;
-            flex-direction: column;
-        }
-
-        .header {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;;
-        }
-
-        fieldset {
-            border: 1px solid black;
-            padding: 10px;
-            height: 100vh;
-        }
-        
-        a {
-            color: white;
-            text-decoration: none;
-        }
-        a:hover {
-            color: white;
-            font-weight: bold;
-            text-decoration: none;
-        }
-
-        legend {
-            margin-left: 5px;
-            width: 12%;
-            background-color: white;
-            display: flex;
-            flex-direction: column;
-
-        }
-
-        .filtro {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-around;
-            font-size: 12px;
-            visibility: hidden;
-        }
-
-        .dados {
-            margin: 3px;
-            max-height: 60vh;
-            /* Defina a altura máxima desejada */
-            overflow: auto;
-            /* border: 1px solid black; */
-            width: 99.50%;
-            border: 1px solid black;
-            padding: 5px;
-        }
-
-        table {
-            width: 100%;
-        }
-
-        th, td {
-            border-bottom: 1px solid black;
-        }
-
-        .active{
-            font-weight: bold;
-        }
+    .custom-modal button {
+        margin: 10px;
+        padding: 5px 15px;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
