--- a/resources/views/components/filtro.edge
+++ b/resources/views/components/filtro.edge
@@ -1,123 +1,5 @@
-<style>
-    @import url("https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap");
-
-    .modal-dialog {
-        max-width: 600px;
-    }
-
-    .modal-content {
-        background-color: white;
-        border: none;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-        font-family: 'Sarala'
-    }
-
-    .modal-header {
-        background-color: #343a40;
-        color: white;
-        padding: 15px;
-    }
-
-    .modal-title {
-        font-size: 1.2rem;
-    }
-
-    .modal-body {
-        padding: 20px;
-    }
-
-    .modal-footer {
-        border-top: none;
-        padding: 15px;
-        text-align: right;
-    }
-
-    .btn {
-        border: none;
-        padding: 10px 20px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-    }
-
-    .btn-secondary {
-        background-color: #6c757d;
-        color: white;
-        font-size: 1rem;
-    }
-
-    .btn-primary {
-        background-color: #0f6b35;
-        color: white;
-        font-size: 1rem;
-    }
-
-    .btn-primary:hover {
-        background-color: #094723;
-    }
-
-    .btn-close {
-        font-size: 1.2rem;
-        color: #fff;
-    }
-
-    .modal-body a:hover {
-        text-decoration: underline;
-    }
-
-    .modal-alerts {
-        position: fixed;
-        bottom: 20px;
-        right: 20px;
-        z-index: 1050;
-        font-family: 'Sarala'
-    }
-
-    .modal-alert {
-        width: 300px;
-        margin-bottom: 10px;
-    }
-
-    .modal-body form {
-        max-width: 100%;
-    }
-
-    .modal-body input,
-    .modal-body select {
-        width: 100%;
-        padding: 10px;
-        margin-bottom: 15px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-    }
-
-    @media (max-width: 768px) {
-
-        .modal-body input,
-        .modal-body select {
-            width: 100%;
-        }
-
-        .modal-footer {
-            display: flex;
-            flex-direction: column;
-            justify-content: center
-        }
-    }
-
-    .filtro-estabelecimento+.select2-container, 
-    .filtro-tipo+.select2-container,
-    .filtro-terminal+.select2-container{
-        width: 100% !important;
-        margin-bottom: 15px
-    }
-
-    .select2-dropdown {
-        z-index: 9999;
-        position: relative !important;
-    }
-</style>
-<div class="modal fade" id="modalFiltro" tabindex="-1" aria-labelledby="modalFiltroLabel" aria-hidden="true">
+<link rel="stylesheet" href="/style/modal.css">
+<div class="modal-filtro modal fade" id="modalFiltro" tabindex="-1" aria-labelledby="modalFiltroLabel" aria-hidden="true">
     <div class="modal-dialog" style="width: 800px;">
         <div class="modal-content">
             <div class="modal-header">
@@ -131,6 +13,7 @@
                     <input id="valor-inicial" type="number" placeholder="Valor Inicial"></span>
                     <input id="valor-final" type="number" placeholder="Valor Final"></span>
                     <input id="cliente" type="text" placeholder="Cliente">
+                    <input id="observacao" type="text" placeholder="Nº Pedido">
                     <input id="contrato" type="text" placeholder="Contrato">
                     <input id="cartao" type="text" placeholder="Cartão">
                     <select id="filtro-tipo" class="filtro-tipo" name="tipos[]" multiple="multiple"></select>
@@ -145,46 +28,3 @@
         </div>
     </div>
 </div>
-<script>
-document.addEventListener("DOMContentLoaded", function () {
-    // Armazene as seleções feitas pelo usuário
-    let selectedEstabelecimentos = [];
-    let selectedTipos = [];
-    let selectedTerminais = [];
-
-    if (document.querySelector(".dashboard-title").getAttribute("data-dashboard") !== "USE") {
-        $('.filtro-terminal').select2({
-            placeholder: "Selecione um terminal (opcional)"
-        });
-    }
-    
-    $('.filtro-estabelecimento').select2({
-        placeholder: "Selecione um estabelecimento (opcional)"
-    });
-
-    $('.filtro-tipo').select2({
-        placeholder: "Selecione uma forma de pagamento (opcional)"
-    });
-
-    // Quando o modal é exibido
-    $('#modalFiltro').on('shown.bs.modal', function () {
-        // Defina os valores selecionados nos elementos select2
-        $('.filtro-estabelecimento').val(selectedEstabelecimentos).trigger('change');
-        $('.filtro-tipo').val(selectedTipos).trigger('change');
-        $('.filtro-terminal').val(selectedTerminais).trigger('change');
-    });
-
-    // Quando o modal é fechado
-    $('#modalFiltro').on('hidden.bs.modal', function () {
-        // Atualize as seleções feitas pelo usuário
-        selectedEstabelecimentos = $('.filtro-estabelecimento').val();
-        selectedTipos = $('.filtro-tipo').val();
-        selectedTerminais = $('.filtro-terminal').val();
-        
-        // Remova as classes do modal aberto anteriormente
-        $("body").removeClass("modal-open");
-        $(".modal-backdrop").remove();
-    });
-});
-
-</script>
