--- a/resources/views/components/menu.edge
+++ b/resources/views/components/menu.edge
@@ -1,172 +1,44 @@
-<style>
-    @import url("https://fonts.googleapis.com/css2?family=Righteous&family=Sarala:wght@400;700&display=swap");
-
-    .menu {
-        position: relative;
-        width: 15%;
-        height: 100vh;
-        padding: 15px;
-        z-index: 1;
-        display: flex;
-        flex-direction: column;
-        background-color: #0f6b35;
-        color: white;
-        font-family: 'Sarala';
-        align-items: left;
-        font-size: 14px
-    }
-
-    .logo-pax {
-        position: absolute;
-        bottom: 15vh;
-        height: 5%;
-        width: 70%;
-        margin-left: 10%
-    }
-
-    .btn-sair {
-        position: absolute;
-        bottom: 5vh;
-        height: 5%;
-        width: 70%;
-        padding: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s;
-        margin-left: 10%;
-        border: none;
-        border-radius: 2px;
-        background-color: #065226;
-        color: white;
-    }
-
-    .btn-sair:hover {
-        background-color: #033518;
-    }
-
-    @media (max-width: 768px) {
-        span {
-            display: none
-        }
-
-        .btn-sair {
-            margin-left: -3%;
-            width: 60%;
-            bottom: 10vh;
-            background-color: transparent
-        }
-
-        .logo-pax {
-            position: absolute;
-            bottom: 12vh;
-            height: 15%;
-            width: 90%;
-            margin-left: -15%
-        }
-
-        .subopcoes {
-            display: none !important;
-            padding-left: 1px;
-            flex-direction: column;
-        }
-
-        .opcao:hover .subopcoes {
-            display: flex !important;
-        }
-    }
-
-    .opcao {
-        padding: 5px;
-        cursor: pointer;
-        border-radius: 2px;
-        width: 100%;
-        transition: background-color 0.3s;
-    }
-
-    .opcao:hover {
-        background-color: #065226;
-    }
-
-    .subopcoes {
-        display: flex;
-        padding-left: 1px;
-        flex-direction: column;
-    }
-
-    .subopcao {
-        padding: 5px;
-        cursor: pointer;
-        color: #ddd;
-        border-radius: 2px;
-        transition: background-color 0.5s;
-    }
-
-    .subopcao:hover {
-        background-color: #033518;
-    }
-
-
-    a {
-        color: white;
-        text-decoration: none;
-    }
-
-    a:hover {
-        color: white;
-
-        text-decoration: none;
-    }
-</style>
 <div class="menu" id="menu">
-    <h5>Bem-vindo<br>{{ auth.user.nome }}</h5>
     <div class="navegacao">
-        <div class="opcao" id="opcaoZoop"><i class="fa-solid fa-credit-card"></i> <Span>Zoop</Span>
-            <div class="subopcoes">
-                <a class="subopcao" id="dashboardZoop"><i class="fa-solid fa-chart-line"></i> <Span>Dashboard</Span></a>
-                <a class="subopcao" data-bs-toggle="modal" id="estabelecimentoZoop">
+        <img class="logo-pax" src="/svg/logo-pax.svg" alt="Logo Pax Primavera">
+        <div class="opcao" id="opcao-zoop"><i class="fa-solid fa-credit-card"></i> <span>Zoop</span>
+            <div class="sub-opcoes">
+                <a class="sub-opcao" id="dashboard-zoop"><i class="fa-solid fa-chart-line"></i>
+                    <span>Dashboard</span></a>
+                <a class="sub-opcao" data-bs-toggle="modal" id="estabelecimento-zoop" style="display:none">
                     <i class="fa-solid fa-building"></i>
-                    <Span>Estabelecimento</Span>
+                    <span>Estabelecimento</span>
                 </a>
-                <a class="subopcao" data-bs-toggle="modal" id="vincular">
+                <a class="sub-opcao" data-bs-toggle="modal" id="vincular">
                     <i class="fa-solid fa-sim-card"></i>
-                    <Span>Terminal</Span>
+                    <span>Vincular Terminal</span>
                 </a>
             </div>
         </div>
-        <div class="opcao" id="opcaoUse"><i class="fa-solid fa-barcode"></i> <Span>Use</Span>
-            <div class="subopcoes">
-                <a class="subopcao" id="dashboardUse"><i class="fa-solid fa-chart-line"></i>
-                    <span>Dashboard</Span></a>
-                <a class="subopcao" data-bs-toggle="modal" id="estabelecimentoUse">
+        <div class="opcao" id="opcao-use" style="display:none"><i class="fa-solid fa-barcode"></i> <span>Use</span>
+            <div class="sub-opcoes">
+                <a class="sub-opcao" id="dashboard-use"><i class="fa-solid fa-chart-line"></i>
+                    <span>Dashboard</span></a>
+                <a class="sub-opcao" data-bs-toggle="modal" id="estabelecimento-use">
                     <i class="fa-solid fa-building"></i>
                     <span>Estabelecimento</span>
                 </a>
             </div>
         </div>
-        <div class="opcao" id="opcaoUsuario"><a><i class="fa-solid fa-user-group"></i>
-                <span>Usuário</span></a></div>
+        <div class="opcao" id="opcao-usuario" style="display:none">
+            <a>
+                <i class="fa-solid fa-user-plus"></i>
+                <span>Cadastrar Usuário</span>
+            </a>
+        </div>
     </div>
-    <img class="logo-pax" src="/svg/logo-pax.svg" alt="Logo Pax Primavera">
-    <button class="btn-sair" id="logoutButton"><i class="fa-solid fa-right-from-bracket"></i> <span>Sair</span></button>
+    <div class="footer-menu">
+        <i class="fa-solid fa-user fa-xl" title="{{auth.user.nome}}"></i><br>
+        <span>
+            <h5 class="info-usuario" id="info-usuario" data-auth="{{auth.user.tipo}}">{{ auth.user.nome }}</h5>
+        </span>
+        <button class="btn-sair" id="logout-button"><i class="fa-solid fa-right-from-bracket fa-md"><span>
+                    Sair</span></i>
+        </button>
+    </div>
 </div>
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const logoutButton = document.getElementById("logoutButton");
-
-        logoutButton.addEventListener("click", function () {
-
-            fetch("/api/usuario/logout", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-
-                },
-            })
-                .then(data => {
-                    window.location.href = "/login";
-                })
-                .catch(error => {
-                    console.error("Erro ao fazer logout:", error);
-                });
-        });
-    });
-</script>
