--- a/resources/views/pages/login.edge
+++ b/resources/views/pages/login.edge
@@ -6,65 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gerencial Financeiro - Login</title>
-    <style>
-        body {
-            background-color: #f5f5f5;
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        .login-container {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            width: 300px;
-        }
-
-        .login-container h2 {
-            font-size: 24px;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .login-form {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .login-form input {
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            padding: 10px;
-        }
-
-        .login-form input[type="text"],
-        .login-form input[type="password"] {
-            width: 100%;
-        }
-
-        .login-form input[type="submit"] {
-            background-color: #0f6b35;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            cursor: pointer;
-            padding: 10px;
-            transition: background-color 0.3s;
-        }
-
-        .login-form input[type="submit"]:hover {
-            background-color: #094723;
-        }
-    </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style/index.css">
     <script src="https://kit.fontawesome.com/30a0b5289d.js" crossorigin="anonymous"></script>
+    <script src="/js/login.js"></script>
 </head>
 
 <body>
@@ -73,19 +19,14 @@
         <form class="login-form" action="/api/usuario/login" method="POST">
             <input type="text" name="cpf" id="cpf" placeholder="CPF" required>
             <input type="password" name="senha" placeholder="Senha" required>
-            <input type="submit" value="Entrar">
+            <input type="submit" value="Entrar" id="btn-submit">
         </form>
     </div>
+    <div class="login-modal-alerts"></div>
 
-    <!-- Biblioteca Inputmask -->
+    <!-- Bibliotecas JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.6/jquery.inputmask.min.js"></script>
-    <script>
-        // Aplicar máscara de CPF ao campo de CPF
-         $(document).ready(function() {
-             $('#cpf').inputmask('999.999.999-99', { placeholder: '___.___.___-__' });
-         });
-    </script>
 </body>
 
 </html>
