--- a/resources/views/components/dashboard.edge
+++ b/resources/views/components/dashboard.edge
@@ -11,7 +11,7 @@
         <form method="post" class="date-form">
             <input type="date" name="startDate" id="data-inicial" class="date-input" placeholder="Data de início">
             <input type="date" name="endDate" id="data-final" class="date-input" placeholder="Data de término">
-            <button type="button" class="filter-button">Filtrar</button>
+            <button type="button" class="filter-button">Buscar</button>
             <h6 class="info">Selecione o período a ser buscado!</h6>
             <div class="print-button-container">
                 <button type="button" id="imprimir" class="print-button" data-mode="total">Imprimir</button>
@@ -21,7 +21,7 @@
         </form>
         <div class="view-buttons">
             <span id="filtro" style="cursor:pointer; display:none"><i class="fa-solid fa-filter fa-2xl"></i></span>
-            <button id="view-all" class="view-button active-view">Todos</button>
+            <button id="view-all" class="view-button active-view">Resumo</button>
             <button id="view-detailed" class="view-button">Detalhado</button>
         </div>
     </div>
